--- a/setup.cfg
+++ b/setup.cfg
@@ -44,6 +44,10 @@ package_dir =
 [options.packages.find]
 where = src
 
+[options.entry_points]
+console_scripts =
+    compath-resources = compath_resources.cli:main
+
 # configuring bdist_wheel
 [bdist_wheel]
 python-tag = py36
