--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@
 # Configuring setup()
 [metadata]
 name = compath_resources
-version = 0.0.5
+version = 0.0.6-dev
 url = https://github.com/compath/resources
 author = Daniel Domingo-Fernández
 author_email = daniel.domingo.fernandez@scai.fraunhofer.de
