--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,8 @@ keywords =
 python_requires = >=3.6
 zip-safe = false
 install_requires =
-    pybel>=0.12.0
+    pybel>=0.12.0,<0.13.0
+    bio2bel>=0.2.0,<0.3.0
     click
     pandas
 packages = find:
