--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,13 @@ packages = find:
 package_dir =
     = src
 
+[options.extras_require]
+docs =
+    sphinx
+    sphinx-rtd-theme
+    sphinx-click
+    sphinx-autodoc-typehints
+
 [options.packages.find]
 where = src
 
