Add beginning of RDF exporter

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,8 @@ docs =
     sphinx-rtd-theme
     sphinx-click
     sphinx-autodoc-typehints
+rdf =
+    rdflib
 
 [options.packages.find]
 where = src
