--- a/tox.ini
+++ b/tox.ini
@@ -113,6 +113,7 @@ commands =
 [testenv:bumpversion]
 commands = bumpversion {posargs}
 skip_install = true
+passenv = HOME
 deps =
     bumpversion
 
@@ -135,6 +136,7 @@ commands =
 
 [testenv:finish]
 skip_install = true
+passenv = HOME
 deps =
     {[testenv:release]deps}
     bumpversion
@@ -143,3 +145,4 @@ commands =
     {[testenv:release]commands}
     git push
     bumpversion patch
+    git push
