--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,6 @@
 ##########################
 # Setup.py Configuration #
 ##########################
-# Configuring setup()
 [metadata]
 name = compath_resources
 version = 0.0.8-dev
@@ -38,7 +37,7 @@ keywords =
 python_requires = >=3.6
 zip-safe = false
 install_requires =
-    pybel>=0.12.0,<0.13.0
+    pybel>=0.13.0
     bio2bel>=0.2.0,<0.3.0
     click
     pandas
@@ -61,7 +60,3 @@ where = src
 [options.entry_points]
 console_scripts =
     compath-resources = compath_resources.cli:main
-
-# configuring bdist_wheel
-[bdist_wheel]
-python-tag = py36
