Add bio2bel entrypoint

--- a/setup.cfg
+++ b/setup.cfg
@@ -60,3 +60,5 @@ where = src
 [options.entry_points]
 console_scripts =
     compath-resources = compath_resources.cli:main
+bio2bel =
+    compath = compath_resources
