--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ##########################
 [metadata]
 name = compath_resources
-version = 0.0.8-dev
+version = 0.0.8
 description = ComPath Resource Utilities.
 long_description = file: README.rst
 
