Update links after renaming

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ long_description = file: README.rst
 license = MIT
 license_file = LICENSE
 
-url = https://github.com/compath/resources
+url = https://github.com/compath/compath-resources
 
 author = Daniel Domingo-Fernández
 author_email = daniel.domingo.fernandez@scai.fraunhofer.de
