--- a/setup.cfg
+++ b/setup.cfg
@@ -34,11 +34,11 @@ keywords =
     Networks Biology
 
 [options]
-python_requires = >=3.6
+python_requires = >=3.7
 zip-safe = false
 install_requires =
-    pybel>=0.13.0
-    bio2bel>=0.2.0,<0.3.0
+    pybel>=0.14.0,<0.15.0
+    bio2bel>=0.3.0,<0.4.0
     click
     pandas
 packages = find:
