Update curation script

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,10 +37,13 @@ keywords =
 python_requires = >=3.7
 zip-safe = false
 install_requires =
-    pybel>=0.14.0,<0.15.0
-    bio2bel>=0.3.0,<0.4.0
+    pybel
+    bio2bel
     click
     pandas
+    pystow
+    xlrd
+
 packages = find:
 package_dir =
     = src
