--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,8 @@ classifiers =
     Intended Audience :: Developers
     Programming Language :: Python
     Programming Language :: Python :: 3.7
-    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3 :: Only
     License :: OSI Approved :: MIT License
 keywords =
@@ -43,6 +44,9 @@ install_requires =
     pandas
     pystow
     xlrd
+    seaborn
+    matplotlib
+    more_click
 
 packages = find:
 package_dir =
