--- a/setup.cfg
+++ b/setup.cfg
@@ -4,13 +4,16 @@
 [metadata]
 name = compath_resources
 version = 0.0.9-dev
-description = ComPath Resource Utilities.
+description = ComPath Resource Utilities
 long_description = file: README.rst
 
 license = MIT
 license_file = LICENSE
 
 url = https://github.com/compath/compath-resources
+download_url = https://github.com/compath/compath-resources/releases
+project_urls =
+    Bug Tracker = https://github.com/compath/compath-resources/issues
 
 author = Daniel Domingo-Fernández
 author_email = daniel.domingo.fernandez@scai.fraunhofer.de
@@ -30,6 +33,7 @@ keywords =
     KEGG
     Reactome
     WikiPathways
+    PathBank
     Biological Networks
     Pathway Analysis
     Networks Biology
