--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ##########################
 [metadata]
 name = compath_resources
-version = 0.0.9-dev
+version = 0.0.9
 description = ComPath Resource Utilities
 long_description = file: README.rst
 
