--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,21 +23,17 @@ jobs:
         run: tox -e flake8
       - name: Check package metadata with Pyroma
         run: tox -e pyroma
-#  tests:
-#    name: Tests
-#    runs-on: ${{ matrix.os }}
-#    strategy:
-#      matrix:
-#        os: [ ubuntu-latest, windows-latest ]
-#        python-version: [ 3.6, 3.7, 3.8, 3.9 ]
-#    steps:
-#      - uses: actions/checkout@v2
-#      - name: Set up Python ${{ matrix.python-version }}
-#        uses: actions/setup-python@v2
-#        with:
-#          python-version: ${{ matrix.python-version }}
-#      - name: Install dependencies
-#        run: pip install tox
-#      - name: Test with pytest
-#        run:
-#          tox -e py
+  tests:
+    name: Tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+      - name: Install dependencies
+        run: pip install tox
+      - name: Test with pytest
+        run:
+          tox -e py
