--- a/tox.ini
+++ b/tox.ini
@@ -96,7 +96,7 @@ deps =
     pep8-naming
     flake8-colors
 commands =
-    flake8 src/compath_resources/ setup.py
+    flake8 src/compath_resources/ tests/ setup.py
 
 [testenv:doc8]
 skip_install = true
