Update testing config

--- a/tox.ini
+++ b/tox.ini
@@ -12,18 +12,10 @@ envlist =
 [testenv]
 commands = coverage run -p -m pytest tests {posargs}
 passenv = CI TRAVIS TRAVIS_*
+usedevelop = true
 deps =
     coverage
     pytest
-    pybel
-    flask
-    flask-admin
-whitelist_externals =
-    /bin/cat
-    /bin/cp
-    /bin/mkdir
-    /usr/bin/git
-    /usr/local/bin/hub
 
 [testenv:coverage-clean]
 deps = coverage
