--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ##########################
 [metadata]
 name = compath_resources
-version = 0.1.1
+version = 0.1.2-dev
 description = ComPath Resource Utilities
 long_description = file: README.rst
 
